--- a/src/components/todo/todo.css
+++ b/src/components/todo/todo.css
@@ -23,15 +23,15 @@
     justify-content: center;
     place-items: center;
     text-align: center;
-    margin-top: 10px;
+    margin-top: 2%;
 }
 
 .todo-data {
     margin-top: 50px;
     margin-left: 15%;
     margin-right: 15%;
-    border: 2px solid black;
-    border-radius: 10%;
+    border: 1px solid rgb(133, 133, 133);
+    border-radius: 5px;
     padding: 2%;
 }
 
